Issue #6 adjusting button font size on mobile

--- a/css/timer.css
+++ b/css/timer.css
@@ -37,7 +37,7 @@
         font-size: 34px;
     }
     body .btn-default{
-        font-size: 28px;
+        font-size: 26px;
     }
     body .startStopBtn{
         height: auto;
